--- a/_include/windows/reuse-windows-san-boot-2012r2-to-2019.adoc
+++ b/_include/windows/reuse-windows-san-boot-2012r2-to-2019.adoc
@@ -1,12 +1,7 @@
-
-You can boot the Windows OS using a local boot or a SAN boot. NetApp recommends using a SAN boot if it is supported by your configuration. 
+You can boot the Windows OS using a local boot or a SAN boot. NetApp recommends using a SAN boot to simplify deployment and improve scalability.  
 
 [role="tabbed-block"]
 ====
-.Local boot
---
-Perform a local boot by installing the Windows OS on the local hard disk (SSD, SATA, RAID, and so on).
---
 
 .SAN boot
 --
@@ -28,5 +23,10 @@ NOTE: Multiple paths only become available after the host OS is up and running o
 +
 For information on how to enable the HBA BIOS, see your vendor-specific documentation.
 . Reboot the host to verify the boot was successful
+--
+
+.Local boot
+--
+Perform a local boot by installing the Windows OS on the local hard disk, for example, on an SSD, SATA, or RAID.
 --
 ====
