Add AIX toolkit and AIX 8.0 install topics to project.yml

--- a/hu-aix-san-toolkit.adoc
+++ b/hu-aix-san-toolkit.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: hu-aix-san-toolkit.html
-keywords: 
+keywords: san, toolkit, command, line, AIX, hot, utilities
 summary: The AIX Host Utilities host software provides a command line toolkit on your IBM AIX host.
 ---
 = Learn about the Solaris SAN Toolkit for ONTAP storage
