Add AIX 9.0 command reference

--- a/hu-aix-73.adoc
+++ b/hu-aix-73.adoc
@@ -261,3 +261,7 @@ up      secondary  path3  fcs1    fc_aix_4        1
 == Step 4: Review the known issues
 
 The IBM AIX 7.3 and/or PowerVM (VIOS 4.1) with ONTAP storage release has no known issues.
+
+== What's next?
+
+link:hu-aix-80-command-reference.html[Learn baout the AIX Host Utilties 8.0 sample command reference].
