--- a/hu-aix-70.adoc
+++ b/hu-aix-70.adoc
@@ -4,7 +4,7 @@ permalink: hu-aix-70.html
 keywords: host utilities, aix, powervm, vios, 3.1, 7.0, netapp, ontap
 summary: The AIX Host Utilities assists you to manage ONTAP storage attached to an AIX host.
 ---
-= Install AIX Host Utilities 7.0
+= Install AIX Host Utilities 7.0 for ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
