--- a/hu-aix-73.adoc
+++ b/hu-aix-73.adoc
@@ -41,7 +41,7 @@ To ensure that multipathing is configured correctly for your host, verify that y
 +
 `hdisk1  Available 00-00-02 MPIO NetApp FCP Default PCM Disk`
 
-. The AIX Host Utilities load the NetApp recommended parameter settings for ONTAP LUNs.
+. The AIX Host Utilities load the following parameter settings for ONTAP LUNs.
 +
 .Show parameter settings
 [%collapsible]
@@ -72,7 +72,7 @@ To ensure that multipathing is configured correctly for your host, verify that y
 |===
 ====
 
-. NetApp recommends configuring the following settings to optimize I/O operations for FC and iSCSI.
+. Configure the following settings to optimize I/O operations for FC and iSCSI.
 +
 [role="tabbed-block"]
 ====
@@ -130,7 +130,7 @@ To ensure that multipathing is configured correctly for your host, verify that y
 |===
 --
 ====
-. NetApp recommends making changes to the default settings for MetroCluster or SnapMirror active sync if these options are included in your storage configuration.
+. Change the default settings for MetroCluster or SnapMirror active sync, if these options are included in your storage configuration.
 +
 [role="tabbed-block"]
 ====
@@ -145,7 +145,7 @@ Beginning with ONTAP 9.11.1, SnapMirror active sync is supported for an AIX host
 
 In an AIX configuration, failovers are disruptive. With each failover, you need to perform a re-scan on the host for I/O operations to resume. 
 
-To configure AIX for SnapMirror active sync, refer to the Knowledge Base article link:https://kb.netapp.com/on-prem/ontap/DP/SnapMirror/SnapMirror-KBs/How_to_configure_AIX_Host_for_SnapMirror_active_sync_in_ONTAP[How to configure an AIX host for SnapMirror active sync^]. 
+Refer to the Knowledge Base article link:https://kb.netapp.com/on-prem/ontap/DP/SnapMirror/SnapMirror-KBs/How_to_configure_AIX_Host_for_SnapMirror_active_sync_in_ONTAP[How to configure an AIX host for SnapMirror active sync^]. 
 --
 ====
 
