--- a/hu-aix-80-command-reference.adoc
+++ b/hu-aix-80-command-reference.adoc
@@ -4,7 +4,7 @@ permalink: hu-aix-80-command-reference.html
 keywords: host utilities, aix, powervm, vios, 3.1, 7.2, 7.0, netapp, ontap
 summary: You can use the AIX Host Utilities sample command reference for an end-to-end validation of the NetApp storage configuration using the Host Utilities tool.
 ---
-= Learn about the AIX Host Utilities 8.0 sample command reference
+= Use AIX Host Utilities 8.0 command reference with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
