--- a/hu_aix_71.adoc
+++ b/hu_aix_71.adoc
@@ -4,7 +4,7 @@ permalink: hu_aix_71.html
 keywords: host utilities, aix, 7.1 netapp, ontap
 summary: Describes how to use IBM AIX 7.1 with ONTAP
 ---
-= Use IBM AIX 7.1 with ONTAP
+= Configure AIX 7.1 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,126 +13,27 @@ summary: Describes how to use IBM AIX 7.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can use the ONTAP SAN host configuration settings to configure IBM AIX 7.1 with ONTAP as the target.
+The AIX Host Utilities software provides management and diagnostic tools for AIX hosts that are connected to ONTAP storage. When you install the AIX Host Utilities on an AIX 7.1 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs. 
 
-== Install the AIX Host Utilities
+include::_include/hu/aix-enable-san-boot.adoc[]
 
-You must install the AIX Host Utilities Kit while using AIX Microsoft Multipath I/O (MPIO) with ONTAP storage.
+include::_include/hu/aix-install-host-utilities.adoc[]
 
-You can download the compressed file containing the Host Utilities software packages from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.1/downloads[NetApp Support Site^]. After downloading the file, you need to extract it to get the two software packages required to install the Host Utilities.
+link:hu_aix_61.html[Install AIX Host Utilities 6.1].
+
+
+== Step 3: Confirm the multipath configuration for your host
+
+You can use multipathing with an AIX 7.1 host to manage ONTAP LUNs. 
+
+include::_include/hu/aix-multipathing-introduction.adoc[]
 
 .Steps
-
-. Log in to your host.
+. The AIX Host Utilities load the following parameter settings for ONTAP LUNs.
 +
-* On an AIX host, log in as *root*.
-+
-
-.	Download a copy of the compressed file containing the Host Utilities from NetApp Support Site to a directory on your host.
-
-.	 Go to the directory containing the download.
-
-. Decompress the file and extract the SAN Toolkit software package.
-+
-`tar -xvf ntap_aix_host_utilities_6.1.tar.tgz`
-
-+
-The following directory is created when you decompress the file: `ntap_aix_host_utilities_6.1`.  This directory will have one of the following subdirectories:  MPIO, NON_MPIO, or SAN_Tool_Kit.
-
-.	Install the AIX MPIO:
-+
-`installp -aXYd /var/tmp/ntap_aix_host_utilities_6.1/MPIO NetApp.MPIO_Host_Utilities_Kit`
-
-. Install the SAN Toolkit:
-`installp -aXYd /var/tmp/ntap_aix_host_utilities_6.1/SAN_Tool_Kit NetApp.SAN_toolkit`
-
-. Reboot the host.
-
-== SAN Toolkit
-
-include::_include/hu/reuse_hu_san_toolkit_withoutexample.adoc[]
-
-.Example
-
-In the following example, the `sanlun lun show` command returns LUN information.
-
-----
-#sanlun lun show
-
-controller(7mode)/                  device      host       lun
-vserver(Cmode)    lun-pathname     filename    adapter   protocol   size   mode
---------------------------------------------------------------------------------
-data_vserver      /vol/vol1/lun1    hdisk0      fcs0       FCP       60g    C
-data_vserver      /vol/vol2/lun2    hdisk0      fcs0       FCP       20g    C
-data_vserver      /vol/vol3/lun3    hdisk11     fcs0       FCP       20g    C
-data_vserver      /vol/vol4/lun4    hdisk14     fcs0       FCP       20g    C
-
-----
-
-== SAN Booting
-
-.Before you begin
-If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
-
-SAN booting is the process of setting up a SAN-attached disk (a LUN) as a boot device for an AIX host.  You can set up a SAN boot LUN to work in an AIX MPIO environment that is running the AIX Host Utilities with either the FC or FCoE protocol. The method you use for creating a SAN boot LUN and installing a new OS image on it in an AIX MPIO environment can vary, depending on which protocol you are using.
-
-== Multipathing
-
-Multipathing allows you to configure multiple network paths between the host and storage system. If one path fails, traffic continues on the remaining paths. The AIX environment of the Host Utilities use the AIX native multipathing solution, MPIO.
-
-For AIX, Path Control Module (PCM) is responsible for controlling multiple paths. PCM is a storage vendor-supplied code that handles path management. This gets installed and enabled as part of the Host Utilities installation.
-
-include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
-
-----
-# sanlun lun show -p |grep -p hdisk78
-                    ONTAP Path: vs_aix_clus:/vol/chataix_205p2_vol_en_1_7/jfs_205p2_lun_en
-                           LUN: 37
-                      LUN Size: 15g
-                   Host Device: hdisk78
-                          Mode: C
-            Multipath Provider: AIX Native
-        Multipathing Algorithm: round_robin
-------- ---------- ------ ------- ---------- ----------
-host    vserver    AIX                        AIX MPIO
-path    path       MPIO   host    vserver         path
-state   type       path   adapter LIF         priority
-------- ---------- ------ ------- ---------- ----------
-up      secondary  path0  fcs0    fc_aix_1        1
-up      primary    path1  fcs0    fc_aix_2        1
-up      primary    path2  fcs1    fc_aix_3        1
-up      secondary  path3  fcs1    fc_aix_4        1
-
-----
-
-include::_include/hu/reuse_hu_asa_configuration.adoc[]
-
-NOTE: All SAN Arrays (ASA) configurations are supported beginning in ONTAP 9.8 for AIX Hosts.
-
-----
-# sanlun lun show -p |grep -p hdisk78
-                    ONTAP Path: vs_aix_clus:/vol/chataix_205p2_vol_en_1_7/jfs_205p2_lun_en
-                           LUN: 37
-                      LUN Size: 15g
-                   Host Device: hdisk78
-                          Mode: C
-            Multipath Provider: AIX Native
-        Multipathing Algorithm: round_robin
------- ------- ------ ------- --------- ----------
-host   vserver  AIX                      AIX MPIO
-path   path     MPIO   host    vserver     path
-state  type     path   adapter LIF       priority
------- ------- ------ ------- --------- ----------
-up     primary  path0  fcs0    fc_aix_1     1
-up     primary  path1  fcs0    fc_aix_2     1
-up     primary  path2  fcs1    fc_aix_3     1
-up     primary  path3  fcs1    fc_aix_4     1
-----
-
-== Recommended Settings
-
-NetApp recommends the following parameter settings for ONTAP LUNs. The critical parameters for ONTAP LUNs are set automatically after installing the NetApp Host Utilities Kit.
-
+.Show parameter settings
+[%collapsible]
+====
 [cols=4*, options="header"]
 |===
 | Parameter
@@ -152,25 +53,21 @@ NetApp recommends the following parameter settings for ONTAP LUNs. The critical 
 | dyntrk | MPIO / non-MPIO | Yes | Uses OS Default values
 | fc_err_recov | MPIO / non-MPIO | Fast_fail | Uses OS Default values
 | q_type | MPIO / non-MPIO | simple | Uses OS Default values
-| num_cmd_elems | MPIO / non-MPIO | 1024 for AIX
-| FC EN1B, FC EN1C
+| num_cmd_elems | MPIO / non-MPIO | 1024 for AIX | FC EN1B, FC EN1C
 | num_cmd_elems | MPIO / non-MPIO | 500 for AIX (standalone/physical)
 200 for VIOC
- | FC EN0G
+| FC EN0G
 |===
+====
 
-== Recommended Settings for MetroCluster
+include::_include/hu/aix-recommended-settings-mcc-snapmirror-active-sync.adoc[]
 
-By default, the AIX operating system enforces a shorter I/O timeout when no paths to a LUN are available. This might occur in configurations including single-switch SAN fabric and MetroCluster configurations that experience unplanned failovers. For additional information and recommended changes to default settings, refer to link:https://kb.netapp.com/app/answers/answer_view/a_id/1001318[NetApp KB1001318^]
+include::_include/hu/aix-asa-aff-fas-examples.adoc[]
 
-== AIX support with SnapMirror active sync
+== Step 4: Review the known issues
 
-Beginning with ONTAP 9.11.1, AIX is supported with SnapMirror active sync. With an AIX configuration, the primary cluster is the "active" cluster.
+The AIX 7.1 with ONTAP storage release has no known issues.
 
-In an AIX configuration, failovers are disruptive. With each failover, you will need to perform a re-scan on the host for I/O operations to resume.
+== What's next?
 
-To configure AIX for SM-BC, refer to the Knowledge Base article link:https://kb.netapp.com/Advice_and_Troubleshooting/Data_Protection_and_Security/SnapMirror/How_to_configure_an_AIX_host_for_SnapMirror_Business_Continuity_(SM-BC)[How to configure an AIX host for SnapMirror active sync^].
-
-== Known issues
-
-There are no known issues.
+link:hu_aix_61_cmd.html[Learn abaout the AIX Host Utilties 6.1 sample command reference].
