--- a/_include/hu/aix-asa-aff-fas-examples.adoc
+++ b/_include/hu/aix-asa-aff-fas-examples.adoc
@@ -5,11 +5,14 @@
 The following example outputs show the correct path status for ONTAP LUNs in an ASA, AFF, or FAS configuration.
 +
 [role="tabbed-block"]
-====
+=====
 .ASA configurations
 --
 An ASA configuration optimizes all paths to a given LUN, keeping them active ("primary"). This improves performance by serving I/O operations through all paths at the same time.
 
+.Show example
+[%collapsible]
+====
 ----
 # sanlun lun show -p |grep -p hdisk78
                     ONTAP Path: vs_aix_clus:/vol/chataix_205p2_vol_en_1_7/jfs_205p2_lun_en
@@ -29,6 +32,8 @@ up     primary  path1  fcs0    fc_aix_2     1
 up     primary  path2  fcs1    fc_aix_3     1
 up     primary  path3  fcs1    fc_aix_4     1
 ----
+====
+
 --
 .AFF or FAS configuration
 --
@@ -36,6 +41,9 @@ An AFF or FAS configuration should have two groups of paths with higher and lowe
 
 The following example displays the correct output for an ONTAP LUN with two Active/Optimized ("primary") paths and two Active/Non-Optimized ("secondary") paths:
 
+.Show example
+[%collapsible]
+====
 ----
 # sanlun lun show -p |grep -p hdisk78
                     ONTAP Path: vs_aix_clus:/vol/chataix_205p2_vol_en_1_7/jfs_205p2_lun_en
@@ -55,5 +63,6 @@ up      primary    path1  fcs0    fc_aix_2        1
 up      primary    path2  fcs1    fc_aix_3        1
 up      secondary  path3  fcs1    fc_aix_4        1
 ----
---
 ====
+--
+=====
