--- a/hu_windows_2016.adoc
+++ b/hu_windows_2016.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
 permalink: hu_windows_2016.html
-keywords: windows, enterprise
-summary: Using Windows Server 2016 with ONTAP
+keywords: fcp, iscsi, windows, host, utilities, 2016, ontp, luns, configure
+summary: Install Windows Host Utilities on a Windows Server 2016 host to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Use Windows Server 2016 with ONTAP
+= Configure Windows Server 2016 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,38 +13,24 @@ summary: Using Windows Server 2016 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can use the ONTAP SAN host configuration settings to configure Windows Server 2016 for operation with ONTAP storage. 
+The Windows Host Utilities are a set of software programs with documentation that enables you to connect Windows hosts to virtual disks (LUNs) on a NetApp SAN. When you install the Windows Host Utilities on a Windows Server 2016 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs. .
 
-== Boot the Windows OS
+include::_include/windows/windows-san-boot-2012r2-to-2019.adoc[]
 
-include::_include/windows/reuse-windows-san-boot-2012r2-to-2019.adoc[]
-
-== Install Windows hotfixes
+== Step 2: Install Windows hotfixes
 NetApp recommends installing the *latest cumulative update* available from the Microsoft Update Catalog on the host server.
 
 .Steps
 
 . Download the hotfixes from the link:https://www.catalog.update.microsoft.com/Search.aspx?q=Update+Windows+Server+2016[Microsoft Update Catalog 2016^].
 
-include::_include/windows/reuse_windows_hotfix_install.adoc[]
+include::_include/windows/windows_hotfix_install.adoc[]
 
-== Install the Windows Host Utilities
-include::_include/windows/reuse_windows_installing_WUHU.adoc[]
+include::_include/windows/windows_install_WUHU.adoc[]
 
-== Multipathing
+include::_include/windows/windows-multipathing.adoc[]
 
-You need to install the Microsoft Multipath I/O (MPIO) software and enable multipathing if your Windows host has more than one path to the storage system. When you select MPIO support, the Windows Host Utilities enables the MPIO feature included in Windows Server 2016. If you're not using the Windows Host Utilities, you need to enable multipathing manually.
+== Step 5: Review the Known issues
+There are no known issues.
 
-include::_include/windows/reuse-windows-multipathing.adoc[]
-
-== SAN configuration
-include::_include/windows/reuse_windows_asa_configuration.adoc[]
-
-=== Non-ASA configuration
-include::_include/windows/reuse_windows_non_asa_configuration.adoc[]
-
-== Recommended settings
-include::_include/windows/reuse_windows_recommended_settings.adoc[]
-
-== Known issues
-There are no known issues for the Windows Server 2016 with ONTAP release.
+include::_include/windows/windows-whats-next.adoc[]
