--- a/_include/windows/windows-san-boot-2012r2-to-2019.adoc
+++ b/_include/windows/windows-san-boot-2012r2-to-2019.adoc
@@ -13,16 +13,14 @@ NOTE: You can use the configuration settings provided in this procedure to confi
 Use the https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your Windows OS, host bus adapter (HBA), HBA firmware, HBA boot BIOS, and ONTAP version support SAN booting.
 
 .Steps
-. Map the SAN boot LUN to the host.
+. Create a SAN boot LUN and map it to the host.
 +
 See link:https://docs.netapp.com/us-en/ontap/san-management/index.html[SAN storage management^].
-. Verify that multiple paths are available. 
-+
-NOTE: Multiple paths only become available after the host OS is up and running on the paths.
+
 . Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped. 
 +
 For information on how to enable the HBA BIOS, see your vendor-specific documentation.
-. Reboot the host to verify the boot was successful
+. Verify that the configuration was successful by rebooting the host and verifying that the OS is up and running.
 --
 
 .Local boot
