--- a/_include/windows/windows_install_WUHU.adoc
+++ b/_include/windows/windows_install_WUHU.adoc
@@ -2,4 +2,4 @@
 
 NetApp recommends downloading and installing the latest utility kit to support ONTAP LUN management and assist technical support with gathering configuration data. 
 
-For Windows Host Utilities configuration and installation information, see link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71_rn.html[Windows Host Utilities] and select the installation procedure for your Windows Host Utilities version.
+For Windows Host Utilities configuration and installation information, see the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71_rn.html[Windows Host Utilities] documentation and select the installation procedure for your Windows Host Utilities version.
