Add missing heading for step 1

--- a/_include/windows/windows-san-boot-2012r2-to-2019.adoc
+++ b/_include/windows/windows-san-boot-2012r2-to-2019.adoc
@@ -1,3 +1,5 @@
+== Step 1: Optionally, enable SAN booting
+
 You can boot the Windows OS using a local boot or a SAN boot. NetApp recommends using a SAN boot to simplify deployment and improve scalability.  
 
 [role="tabbed-block"]
