--- a/_include/windows/windows-san-boot-2022-and-later.adoc
+++ b/_include/windows/windows-san-boot-2022-and-later.adoc
@@ -1,4 +1,4 @@
-== Step 1: Boot the Windows OS
+== Step 1: Optionally, enable SAN booting
 
 You can boot the Windows OS using a local boot or a SAN boot. NetApp recommends using a SAN boot if it is supported by your configuration. 
 
