--- a/hu_wuhu_72.adoc
+++ b/hu_wuhu_72.adoc
@@ -51,7 +51,7 @@ The Host Utilities support different Windows host configurations, protocols, and
 
 == Verify your host and storage system configuration
 
-Before you install Host Utilities on the <<supported-windows-versions-72,supported Windows version>>, verify that your host and storage system configuration is supported.
+Verify that your host and storage system configuration are supported before you install Windows Host Utilities for the <<supported-windows-versions-72,supported Windows Server>> host.
 
 .Steps
 
