--- a/hu_rhel_95.adoc
+++ b/hu_rhel_95.adoc
@@ -33,7 +33,7 @@ include::_include/hu/linux-rhel-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-There are no known issues for the FC host configuration for RHEL 9.5 with ONTAP release.
+There are no known issues.
 
 == What's next?
 
