--- a/hu_sles_12SP2.adoc
+++ b/hu_sles_12SP2.adoc
@@ -31,7 +31,7 @@ include::_include/hu/linux-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-There are no known issues for the SUSE Linux Enterprise Server 12 SP2 with ONTAP release.
+There are no known issues.
 
 == What's next?
 
