--- a/hu_sles_15.adoc
+++ b/hu_sles_15.adoc
@@ -31,7 +31,7 @@ include::_include/hu/linux-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-The SUSE Linux Enterprise Server 15 with ONTAP release has the following known issue:
+The SUSE Linux Enterprise Server 15 with ONTAP storage release has the following known issue:
 
 [cols=3*,options="header"]
 |===
