--- a/hu_sles_15SP1.adoc
+++ b/hu_sles_15SP1.adoc
@@ -31,7 +31,7 @@ include::_include/hu/linux-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-The SUSE Linux Enterprise Server 15 SP1 with ONTAP release has the following known issues:
+The SUSE Linux Enterprise Server 15 SP1 with ONTAP storage release has the following known issues:
 
 [cols=3,options="header" width="80%"]
 |===
