--- a/hu_rhel_82.adoc
+++ b/hu_rhel_82.adoc
@@ -21,7 +21,7 @@ include::_include/hu/linux-enable-san-boot.adoc[]
 
 include::_include/hu/install-linux-host-utilities.adoc[]
 
-== Step 2: Confirm the multipath configuration for your host
+== Step 3: Confirm the multipath configuration for your host
 
 You can use multipathing with RHEL 8.2 to manage ONTAP LUNs.
 
@@ -34,7 +34,7 @@ include::_include/hu/linux-rhel-customize-parameters.adoc[]
 [[known-problems-and-limitations]]
 == Step 6: Review the known issues
 
-There are no known issues for the RHEL 8.2 with ONTAP release.
+There are no known issues.
 
 == What's next?
 
