--- a/hu_rhel_90.adoc
+++ b/hu_rhel_90.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
 permalink: hu_rhel_90.html
-keywords: host utilities, red hat, rhel, linux, 8.6, netapp, ontap
-summary: Install the Linux Host Utilities on a RHEL 9.1 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+keywords: host utilities, red hat, rhel, linux, 9.0, netapp, ontap
+summary: Install the Linux Host Utilities on a RHEL 9.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Configure RHEL 9.1 for FCP and iSCSI with ONTAP storage
+= Configure RHEL 9.0 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,7 +13,7 @@ summary: Install the Linux Host Utilities on a RHEL 9.1 host to manage FCP and i
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Red Hat Enterprise Linux (RHEL) 9.1 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Red Hat Enterprise Linux (RHEL) 9.0 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
 include::_include/hu/rhel-configure-kvm-note.adoc[]
 
@@ -21,9 +21,9 @@ include::_include/hu/linux-enable-san-boot.adoc[]
 
 include::_include/hu/install-linux-host-utilities.adoc[]
 
-== Step 2: Confirm the multipath configuration for your host
+== Step 3: Confirm the multipath configuration for your host
 
-You can use multipathing with RHEL 9.1 to manage ONTAP LUNs.
+You can use multipathing with RHEL 9.0 to manage ONTAP LUNs.
 
 include::_include/hu/linux-rhel-multipathing.adoc[]
 
@@ -33,7 +33,7 @@ include::_include/hu/linux-rhel-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-There are no known issues for the RHEL 9.0 with ONTAP release.
+There are no known issues.
 
 == What's next?
 
