--- a/hu_rhel_93.adoc
+++ b/hu_rhel_93.adoc
@@ -21,7 +21,7 @@ include::_include/hu/linux-enable-san-boot.adoc[]
 
 include::_include/hu/install-linux-host-utilities.adoc[]
 
-== Step 2: Confirm the multipath configuration for your host
+== Step 3: Confirm the multipath configuration for your host
 
 You can use multipathing with RHEL 9.3 to manage ONTAP LUNs.
 
@@ -33,7 +33,7 @@ include::_include/hu/linux-rhel-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-The RHEL 9.3 with ONTAP release has the following known issues:
+The RHEL 9.3 with ONTAP storage release has the following known issues:
 
 [options="header", cols="20, 20, 50,20"]
 |===
