--- a/hu_sles_12SP3.adoc
+++ b/hu_sles_12SP3.adoc
@@ -31,7 +31,7 @@ include::_include/hu/linux-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-The SUSE Linux Enterprise Server 15 SP3 with ONTAP release has the following known issues:
+The SUSE Linux Enterprise Server 12 SP3 with ONTAP storage release has the following known issues:
 
 [cols=3*,options="header"]
 |===
