--- a/hu_sles_12SP4.adoc
+++ b/hu_sles_12SP4.adoc
@@ -33,7 +33,7 @@ include::_include/hu/linux-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-There are no known issues for the SUSE Linux Enterprise Server 12 SP4 with ONTAP release.
+There are no known issues.
 
 == What's next?
 
