--- a/hu_sles_15SP2.adoc
+++ b/hu_sles_15SP2.adoc
@@ -31,7 +31,7 @@ include::_include/hu/linux-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-The SUSE Linux Enterprise Server 15 SP2 with ONTAP release has the following known issues:
+The SUSE Linux Enterprise Server 15 SP2 with ONTAP storage release has the following known issues:
 
 [cols="1,3,3"]
 [options="header"]
