--- a/hu_sles_15SP3.adoc
+++ b/hu_sles_15SP3.adoc
@@ -4,7 +4,7 @@ permalink: hu_sles_15SP3.html
 keywords: host utilities, suse linux enterprise server 15 sp3, suse, linux, 15 sp3, netapp, ontap
 summary: Install the Linux Host Utilities on a SUSE Linux Enterprise Server 15 SP3 to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Configure SUSE Linux Enterprise Server 15 SP4 for FCP and iSCSI with ONTAP storage
+= Configure SUSE Linux Enterprise Server 15 SP3 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -31,7 +31,7 @@ include::_include/hu/linux-customize-parameters.adoc[]
 
 == Step 6: Review the known issues
 
-There are no known issues for the SUSE Linux Enterprise Server 15 SP3 with ONTAP release.
+There are no known issues.
 
 == What's next?
 
