--- a/hu_sles_12SP2.adoc
+++ b/hu_sles_12SP2.adoc
@@ -15,6 +15,8 @@ summary: Install the Linux Host Utilities on a SUSE Linux Enterprise Server 12 S
 [.lead]
 The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a SUSE Linux Enterprise Server 12 SP2 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
+include::_include/hu/linux-configure-kvm-note.adoc[]
+
 include::_include/hu/linux-enable-san-boot.adoc[]
 
 include::_include/hu/install-linux-host-utilities.adoc[]
